add parking model and routes
